[package]
name = "polars-smartcore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
polars = "0.26.1"
polars-core = { version = "0.26.1", features=["ndarray"]}
smartcore = "0.3.0"
nalgebra = "0.31.4"
